--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.3"
   - "3.4"
+  - "3.5"
   - pypy
 install:
   - pip install -e '.[tests]'
-script: py.test src
+script: py.test
