--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
   - pypy
+  - pypy3
 install:
   - pip install -e '.[tests]'
 script: py.test
